# pystac

./: .gitignore  .pre-commit-config.yaml  .pystac  .travis.yml  CHANGELOG  CONTRIBUTING.rst  Makefile  README.rst  pyproject.toml  requirements.txt  setup.py  tox.ini
docker/: Dockerfile  build.sh  commit-dev.sh  remove-dev.sh  run-dev.sh
docs/source/: conf.py  index.rst  modules.rst
pystac/: __init__.py  _version.py  constants.py  custom_logging.py  exception.py  logging.conf  monitoring.py  pystac.py
scripts/: init_remote_repo.bash
tests/: pystac_test.py
