[build-system]
requires = ["setuptools", "wheel", "setuptools_scm"]
build-backend = 'setuptools.build_meta'

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.flit.metadata]
module = "pystac"
author = "Jean-Christophe Malapert"
author-email = "jean-christophe.malapert@cnes.fr"
home-page = "https://github.com/pole-surfaces-planetaires/pystac"
classifiers = [ "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",]
description-file = "README.rst"
